# chance_of_showers

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .vulture_ignore.py  .yamllint.yaml  LICENSE.md  Makefile  README.md  config.yaml  cron_jobs.txt  fan_control.py  pyproject.toml  shared_functions.py
.dev_config/: .html5validator.yaml  .prettierignore  .prettierrc.yaml  .vulture_ignore.py  .yamllint.yaml
.github/: pull_request_template.md
.github/workflows/: bandit.yml  black.yml  flake8.yml  isort.yml  mypy.yml  pylint.yml  test.yml  tests.yml  vulture.yml  yamllint.yml
TSModelWrappers/: AutoARIMAWrapper.py  BATSWrapper.py  BlockRNNModelWrapper.py  CatBoostModelWrapper.py  CrostonWrapper.py  DLinearModelWrapper.py  FFTWrapper.py  FourThetaWrapper.py  KalmanForecasterWrapper.py  LightGBMModelWrapper.py  LinearRegressionModelWrapper.py  NBEATSModelWrapper.py  NHiTSModelWrapper.py  NLinearModelWrapper.py  NaiveDriftWrapper.py  NaiveMeanWrapper.py  NaiveMovingAverageWrapper.py  NaiveSeasonalWrapper.py  ProphetWrapper.py  RNNModelWrapper.py  RandomForestWrapper.py  StatsForecastAutoThetaWrapper.py  TBATSWrapper.py  TCNModelWrapper.py  TFTModelWrapper.py  TSMixerModelWrapper.py  TSModelWrapper.py  TiDEModelWrapper.py  TransformerModelWrapper.py  XGBModelWrapper.py  __init__.py
ana/: bayesian_opt_runner.py  drive_bayesian_opt.py  exploratory_ana.html  exploratory_ana.ipynb  exploratory_ana.py  manual_bad_point.py  plotting.py  start_bayesian_opt
circuit_diagram/: circuit_diagram.kicad_pro  circuit_diagram.kicad_sch
daq/: daq.py  etl.py  heartbeat  pulse_test.py  requirements.txt  start_daq  start_daq.sh  switch_test.py
daq/logs/: pre_allocation_test_results.md
daq/web/static/: index.css  index.js
daq/web/templates/: index.html
fan_control/: fan_control.py
media/ana_outputs/: mean_pressure_value_normalized_selected_data.html  mean_pressure_value_selected_data.html
media/ana_outputs/prophet/: prophet_components.html  prophet_predict.html
utils/: AutoARIMAWrapper.py  BATSWrapper.py  BlockRNNModelWrapper.py  CatBoostModelWrapper.py  CrostonWrapper.py  DLinearModelWrapper.py  FFTWrapper.py  FourThetaWrapper.py  KalmanForecasterWrapper.py  LightGBMModelWrapper.py  LinearRegressionModelWrapper.py  NBEATSModelWrapper.py  NHiTSModelWrapper.py  NLinearModelWrapper.py  NaiveDriftWrapper.py  NaiveMeanWrapper.py  NaiveMovingAverageWrapper.py  NaiveSeasonalWrapper.py  ProphetWrapper.py  RNNModelWrapper.py  RandomForestWrapper.py  StatsForecastAutoThetaWrapper.py  TBATSWrapper.py  TCNModelWrapper.py  TFTModelWrapper.py  TSModelWrapper.py  TSModelWrappers.py  TiDEModelWrapper.py  TransformerModelWrapper.py  XGBModelWrapper.py  bayesian_opt.py  plotting.py  shared_functions.py
